--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
+
 .App {
   text-align: center;
 }
@@ -10,6 +12,21 @@
   width:96vw;
   justify-items:center;
   padding:2vh 2vw;
+  font-family: "Poiret One";
+}
+
+h1 {
+  font-size: 7vw;
+  font-weight:bold;
+  margin: 0;
+}
+
+h2 {
+  font-size: 2vw;
+}
+
+p {
+  font-weight:bold;
 }
 
 #clockContainer {
@@ -160,6 +177,39 @@ ul {
   text-align: justify;
   padding-left:10%;
   padding-right:5%;
+  font-weight: bold;
+}
+
+li {
+  padding: 1%;
+}
+
+button {
+  background-color: white;
+  width: 10vw;
+  height: 5vh;
+  font-family: "Poiret One";
+  font-weight: bold;
+  font-size: 2.5vh;
+}
+
+button:hover {
+  background-color: mintcream; 
+  font-weight: bolder;
+}
+
+#statsContainer {
+  display:grid;
+  width: 47%;
+  height: 3%;
+  margin: 0.5% auto;
+  grid-template-columns: 1fr 1fr;
+  gap: 3%;
+  padding: 1%;
+}
+
+.stats {
+  margin:0;
 }
 
 @media screen and (max-width: 992px) {
