Made some absolute elements (arrow and emoji) relative for improved responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -47,9 +47,7 @@ p {
   width:3.5vw;
 }
 
-#arrow {  
-  position:absolute;
-  padding-left:30vh;
+#arrow {
   z-index: -1;
   height: 3vh;
   width:auto;
@@ -57,8 +55,7 @@ p {
 }
 
 #emoji {
-  position:absolute;
-  bottom:50%;
+  margin: auto 0;
   height: 10vh;
   width:auto;
   transform: rotate(90deg);
