--- a/src/App.css
+++ b/src/App.css
@@ -222,6 +222,14 @@ button:hover {
 }
 
 @media screen and (orientation:landscape) and (max-width: 992px) {
+  body {
+    overflow-y: auto;
+    overflow-x:auto;
+  }
+  .App-main {
+    width:98%;
+    padding:1vh 1vw;
+  }
   h1 {
     font-size: 4vw;
   }
@@ -234,14 +242,18 @@ button:hover {
   ul {
     font-size: 1.5vw;
   }
+  #emoji {
+    width: 5vw;
+    height:auto;
+  }
   #clockContainer {
     display:grid;
     grid-template-columns: repeat(19, 5.22%);
-    grid-template-rows: repeat(11, 9%);
+    grid-template-rows: repeat(11, 9.2%);
     justify-items: center;
     margin: auto 0;
     align-self:center;
-    height:78%;
+    height:76%;
     padding:0px;
     align-self:center;
   }
@@ -255,19 +267,17 @@ button:hover {
     height: auto;
   }
   #arrow {
-    padding-left:37vh;
-    height: 4.5vh;
-    z-index: -1;
+    height: 4.2vh;
   }
   #statsContainer {
     padding-top:0;
   }
   #btnNewGame {
     grid-column: 8 / span 5;
-    grid-row: 3 / span 3;
+    grid-row: 4 / span 1;
     height: 5vh;
     width: 10.5vw;
-    align-self:center;
+    align-self: flex-end;
     font-size: 1.5vw;
     padding-top:0;
   }
@@ -282,16 +292,20 @@ button:hover {
   .App-main {
     grid-template-columns: 1fr;
     grid-template-areas: "clock" "info";
-    width:96%;
+    width:98%;
+    padding:1vh 1vw;
   }
   #gamePlayArea {
     grid-area: clock;
-    height:90%;
   }
   #info {
     grid-area: info;
     width:100%;
     height:88%;
+  }
+  #emoji {
+    width: 11vw;
+    height:auto;
   }
   h1 {
     font-size: 10vw;
@@ -307,8 +321,9 @@ button:hover {
   }
   #clockContainer {
     padding-bottom: 10%;
-    grid-template-columns: repeat(19, 5.22%);
-    grid-template-rows: repeat(11, 10%);
+    grid-template-columns: repeat(19, 5.3%);
+    grid-template-rows: repeat(12, 4vh);
+    height:43vh; 
   }
   .stackedCard {
     margin-top: -130%;
@@ -316,13 +331,17 @@ button:hover {
     height: auto;
   }
   #arrow {
-    padding-left:24vh;
-    height: 3.5vh;
-    z-index: -1;
+    height: 3vh;
+    width:auto;
   }
   #btnNewGame {
     height: 3vh;
-    width: 20vw;
+    width: 25vw;
     font-size:3vw;
+    grid-row: 12 / span 1;
+  }
+  .cardPile {
+    height: 5vh;
+    width:7vw;
   }
 }
