Fixed button font size resposiveness

--- a/src/App.css
+++ b/src/App.css
@@ -278,7 +278,7 @@ button:hover {
     height: 5vh;
     width: 10.5vw;
     align-self: flex-end;
-    font-size: 1.5vw;
+    font-size: 70%;
     padding-top:0;
   }
 }
