--- a/src/App.css
+++ b/src/App.css
@@ -287,10 +287,10 @@ button:hover {
   }
   #btnNewGame {
     grid-column: 8 / span 5;
-    grid-row: 4 / span 1;
+    grid-row: 4 / span 2;
     height: 5vh;
     width: 12vw;
-    align-self: flex-end;
+    align-self: center;
     font-size: 60%;
     padding-top:0;
   }
